[package]
name = "arkade"
version = "0.0.1"
edition = "2021"

[dependencies]
#reqwest = { version = "0.12.14", features = ["json"]}
#tokio = { version = "1.44.1", features = ["full"]}
hyper = { version = "1.6.0", features = ["client", "http1"] }
hyperlocal = "0.9.1"
libc = "0.2.171"
tokio = { version = "1.44.1", features = ["full"] }
http-body-util = "0.1.3"
hyper-util = "0.1.10"
serde_json = "1.0.140"
pnet = "0.35.0"
bitvec = "1.0.1"
socket2 = "0.5.8"
regex = "1.11.1"
